syntax = "proto3";

package StreamingChatApp;

message ChatMessage {
    string From = 1;
    string Message = 2;
}

message ChatRequest {
    ChatMessage Request = 1;
}

message ChatNotificationResponse {
    ChatMessage Response = 1;
}

service ChatService {
    rpc Chat (stream ChatRequest) returns (stream ChatNotificationResponse);
}
